--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,14 +18,17 @@ body {
 }
 
 main {
-  width: 70%;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  position: absolute;
   top: 0;
   left: 0;
   right: 0;
+}
+
+#posts {
+  position: absolute;
 }
 
 h1 {
@@ -226,13 +229,17 @@ div .sticky {
   text-decoration: underline;
 }
 
+#posts {
+  padding-bottom: 150px;
+}
+
 /* Footer */
-footer {
+
+/* footer {
   bottom: 0;
   box-shadow: 0 0 5px #f5f5f5;
   left: 0;
   margin: 0;
-  /* position: relative; */
   text-align: center;
   width: 100%;
 }
@@ -240,22 +247,100 @@ footer {
 footer em {
   bottom: 30px;
   left: 0;
-  /* position: relative; */
   width: 100%;
 }
 
-#posts {
-  padding-bottom: 150px;
-}
-
-#posts footer {
+footer {
   background-color: #f5f5f5;
   position: fixed;
   height: 150px;
 }
 
-#posts footer em {
+footer em {
   position: fixed;
+} */
+
+.site-footer
+{
+  background-color:#26272b;
+  padding:30px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color:#737373;
+  width: 100%;
+  /* position: relative; */
+  bottom: 0;
+}
+.site-footer hr
+{
+  border-top-color:#bbb;
+  opacity:0.5
+}
+.site-footer hr.small
+{
+  margin:20px 0
+}
+.site-footer h6
+{
+  color:#fff;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
+}
+.site-footer a
+{
+  color:#737373;
+}
+.site-footer a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links
+{
+  padding-left:0;
+  list-style:none
+}
+.footer-links li
+{
+  display:block
+}
+.footer-links a
+{
+  color:#737373
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links.inline li
+{
+  display:inline-block
+}
+.site-footer .social-icons
+{
+  text-align:right
+}
+.site-footer .social-icons a
+{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+  background-color:#33353d
+}
+.copyright-text
+{
+  margin:0;
+  text-align: left;
+}
+
+#posts .site-footer {
+  bottom: 0;
 }
 
 /* Home Page */
@@ -306,17 +391,18 @@ footer em {
 }
 
 .post-card:hover {
+  cursor: pointer;
   border-right: 10px solid orange;
 }
 
 .post-card-image {
   border-bottom-left-radius: var(--radius);
   border-top-left-radius: var(--radius);
+  width: var(--length);
   height: var(--length);
   margin-left: calc(-1 * var(--length) - 15px);
   margin-top: -10px;
   position: absolute;
-  width: var(--length);
 }
 
 .post-card-title {
@@ -329,7 +415,7 @@ footer em {
 
 .post-card-description {
   font-size: 14px;
-  height: 83.99px;
+  height: auto;
   margin-top: 10px;
   overflow: auto;
 }
@@ -341,7 +427,7 @@ footer em {
 .post-card-action-icon {
   margin: 5px;
   position: relative;
-  top: -25px;
+  /* top: -25px; */
 }
 
 .icon {
@@ -659,7 +745,7 @@ textarea {
   display: none;
 }
 
-#pets_dropdown {
+select {
   margin: 0px 20px 0px 20px;
 }
 
@@ -685,19 +771,19 @@ span {
   margin-bottom: 25px;
 }
 
-/* Media Queries */
-@media only screen and (min-width: 600px) {
-  /* .icon {
-          margin-left: 5px;
-          max-width: 6%;
-          max-height: 6%;
-      }
-      .icon-in-full-post {
-          margin-left: 5px;
-          max-width: 3%;
-          max-height: 3%;
-      } */
+#report-button {
+  --margin: 30px;
+
+  bottom: var(--margin);
+  cursor: pointer;
+  right: var(--margin);
+
+  width: 100px;
+  height: 100px;
+  float: right;
 }
+
+/* Media Queries */
 
 @media (min-width: 992px) {
   #home {
@@ -774,7 +860,7 @@ span {
     flex-direction: column;
     padding: 0px 30px;
   }
-  .profile-wrapper {
+  .profile-row {
     display: none;
   }
   .profile-con {
@@ -809,11 +895,117 @@ span {
   .post-title {
     margin-top: 0px;
   }
-  .post-card-description {
+  /* .post-card-description {
     display: none;
-  }
+  } */
   .post-card-subtitle {
-    margin-top: 35px;
-    margin-bottom: 35px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  .post-card {
+    --length: 100px;
+
+    padding: 10px 15px 10px calc(var(--length) + 10px);
+    height: auto;
+  }
+
+  .post-card-image {
+    width: var(--length);
+  }
+
+  #report-button {
+    height: 60px;
+    width: 60px;
+  }
+}
+
+@media (max-width:991px)
+{
+  .site-footer [class^=col-]
+  {
+    margin-bottom:30px
+  }
+}
+@media (max-width:767px)
+{
+  .site-footer
+  {
+    padding-bottom:0
+  }
+  .site-footer .social-icons
+  {
+    text-align:center
+  }
+}
+.social-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li
+{
+  display:inline-block;
+  margin-bottom:4px
+}
+.social-icons li.title
+{
+  margin-right:15px;
+  text-transform:uppercase;
+  color:#96a2b2;
+  font-weight:700;
+  font-size:13px
+}
+.social-icons a{
+  background-color:#eceeef;
+  color:#818a91;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear
+}
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover
+{
+  color:#fff;
+  background-color:#29aafe
+}
+.social-icons.size-sm a
+{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px
+}
+.social-icons a.facebook:hover
+{
+  background-color:#3b5998
+}
+.social-icons a.twitter:hover
+{
+  background-color:#00aced
+}
+.social-icons a.linkedin:hover
+{
+  background-color:#007bb6
+}
+.social-icons a.dribbble:hover
+{
+  background-color:#ea4c89
+}
+@media (max-width:767px)
+{
+  .social-icons li.title
+  {
+    display:block;
+    margin-right:0;
+    font-weight:600
   }
 }
