--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,17 +18,14 @@ body {
 }
 
 main {
-  width: 80%;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
-}
-
-#posts {
-  position: absolute;
 }
 
 h1 {
@@ -43,6 +40,14 @@ h1 {
 #recycling-guide,
 #posts {
   padding-top: 6rem;
+}
+
+#posts {
+  position: absolute;
+}
+
+#posts {
+  padding-bottom: 150px;
 }
 
 /* Buttons */
@@ -229,113 +234,72 @@ div .sticky {
   text-decoration: underline;
 }
 
-#posts {
-  padding-bottom: 150px;
-}
-
 /* Footer */
 
-/* footer {
-  bottom: 0;
-  box-shadow: 0 0 5px #f5f5f5;
-  left: 0;
-  margin: 0;
-  text-align: center;
-  width: 100%;
-}
-
-footer em {
-  bottom: 30px;
-  left: 0;
-  width: 100%;
-}
-
-footer {
-  background-color: #f5f5f5;
-  position: fixed;
-  height: 150px;
-}
-
-footer em {
-  position: fixed;
-} */
-
-.site-footer
-{
-  background-color:#26272b;
-  padding:30px 0 20px;
-  font-size:15px;
-  line-height:24px;
-  color:#737373;
+.site-footer {
+  background-color: #26272b;
+  padding: 30px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
   width: 100%;
   /* position: relative; */
   bottom: 0;
 }
-.site-footer hr
-{
-  border-top-color:#bbb;
-  opacity:0.5
+.site-footer hr {
+  border-top-color: #bbb;
+  opacity: 0.5;
 }
-.site-footer hr.small
-{
-  margin:20px 0
+.site-footer hr.small {
+  margin: 20px 0;
 }
-.site-footer h6
-{
-  color:#fff;
-  font-size:16px;
-  text-transform:uppercase;
-  margin-top:5px;
-  letter-spacing:2px
+.site-footer h6 {
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
 }
-.site-footer a
-{
-  color:#737373;
+.site-footer a {
+  color: #737373;
 }
-.site-footer a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+.site-footer a:hover {
+  color: #3366cc;
+  text-decoration: none;
 }
-.footer-links
-{
-  padding-left:0;
-  list-style:none
+.footer-links {
+  padding-left: 0;
+  list-style: none;
 }
-.footer-links li
-{
-  display:block
+.footer-links li {
+  display: block;
 }
-.footer-links a
-{
-  color:#737373
+.footer-links a {
+  color: #737373;
 }
-.footer-links a:active,.footer-links a:focus,.footer-links a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+.footer-links a:active,
+.footer-links a:focus,
+.footer-links a:hover {
+  color: #3366cc;
+  text-decoration: none;
 }
-.footer-links.inline li
-{
-  display:inline-block
+.footer-links.inline li {
+  display: inline-block;
 }
-.site-footer .social-icons
-{
-  text-align:right
+.site-footer .social-icons {
+  text-align: right;
 }
-.site-footer .social-icons a
-{
-  width:40px;
-  height:40px;
-  line-height:40px;
-  margin-left:6px;
-  margin-right:0;
-  border-radius:100%;
-  background-color:#33353d
+.site-footer .social-icons a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d;
 }
-.copyright-text
-{
-  margin:0;
+.copyright-text {
+  margin: 0;
   text-align: left;
 }
 
@@ -391,18 +355,17 @@ footer em {
 }
 
 .post-card:hover {
-  cursor: pointer;
   border-right: 10px solid orange;
 }
 
 .post-card-image {
   border-bottom-left-radius: var(--radius);
   border-top-left-radius: var(--radius);
-  width: var(--length);
-  height: var(--length);
+  height: calc(var(--length) - 2px);
   margin-left: calc(-1 * var(--length) - 15px);
   margin-top: -10px;
   position: absolute;
+  width: var(--length);
 }
 
 .post-card-title {
@@ -415,7 +378,7 @@ footer em {
 
 .post-card-description {
   font-size: 14px;
-  height: auto;
+  height: 83.99px;
   margin-top: 10px;
   overflow: auto;
 }
@@ -427,7 +390,7 @@ footer em {
 .post-card-action-icon {
   margin: 5px;
   position: relative;
-  /* top: -25px; */
+  top: -10px;
 }
 
 .icon {
@@ -442,7 +405,7 @@ footer em {
 .page-nav {
   bottom: 80px;
   left: 0;
-  position: fixed;
+  position: absolute;
   width: 100%;
 }
 
@@ -745,7 +708,7 @@ textarea {
   display: none;
 }
 
-select {
+#pets_dropdown {
   margin: 0px 20px 0px 20px;
 }
 
@@ -769,21 +732,22 @@ span {
 .post-title {
   margin-top: 35px;
   margin-bottom: 25px;
-}
-
-#report-button {
-  --margin: 30px;
-
-  bottom: var(--margin);
-  cursor: pointer;
-  right: var(--margin);
-
-  width: 100px;
-  height: 100px;
-  float: right;
+  font-weight: bold;
 }
 
 /* Media Queries */
+@media only screen and (min-width: 600px) {
+  /* .icon {
+          margin-left: 5px;
+          max-width: 6%;
+          max-height: 6%;
+      }
+      .icon-in-full-post {
+          margin-left: 5px;
+          max-width: 3%;
+          max-height: 3%;
+      } */
+}
 
 @media (min-width: 992px) {
   #home {
@@ -860,7 +824,7 @@ span {
     flex-direction: column;
     padding: 0px 30px;
   }
-  .profile-row {
+  .profile-wrapper {
     display: none;
   }
   .profile-con {
@@ -895,117 +859,95 @@ span {
   .post-title {
     margin-top: 0px;
   }
-  /* .post-card-description {
+  .post-card-description {
     display: none;
-  } */
+  }
   .post-card-subtitle {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 20px;
+    margin-bottom: 22px;
   }
-
-  .post-card {
-    --length: 100px;
-
-    padding: 10px 15px 10px calc(var(--length) + 10px);
-    height: auto;
-  }
-
-  .post-card-image {
-    width: var(--length);
-  }
-
   #report-button {
+    height: 30px;
+    width: 30px;
+  }
+}
+
+/* #report-button {
     height: 60px;
     width: 60px;
+  } */
+@media (max-width: 991px) {
+  .site-footer [class^="col-"] {
+    margin-bottom: 30px;
   }
 }
-
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
-  {
-    margin-bottom:30px
+@media (max-width: 767px) {
+  .site-footer {
+    padding-bottom: 0;
+  }
+  .site-footer .social-icons {
+    text-align: center;
   }
 }
-@media (max-width:767px)
-{
-  .site-footer
-  {
-    padding-bottom:0
-  }
-  .site-footer .social-icons
-  {
-    text-align:center
-  }
+.social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
-.social-icons
-{
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none
+.social-icons li {
+  display: inline-block;
+  margin-bottom: 4px;
 }
-.social-icons li
-{
-  display:inline-block;
-  margin-bottom:4px
+.social-icons li.title {
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px;
 }
-.social-icons li.title
-{
-  margin-right:15px;
-  text-transform:uppercase;
-  color:#96a2b2;
-  font-weight:700;
-  font-size:13px
+.social-icons a {
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
-.social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
-  font-size:16px;
-  display:inline-block;
-  line-height:44px;
-  width:44px;
-  height:44px;
-  text-align:center;
-  margin-right:8px;
-  border-radius:100%;
-  -webkit-transition:all .2s linear;
-  -o-transition:all .2s linear;
-  transition:all .2s linear
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+  color: #fff;
+  background-color: #29aafe;
 }
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover
-{
-  color:#fff;
-  background-color:#29aafe
+.social-icons.size-sm a {
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px;
 }
-.social-icons.size-sm a
-{
-  line-height:34px;
-  height:34px;
-  width:34px;
-  font-size:14px
+.social-icons a.facebook:hover {
+  background-color: #3b5998;
 }
-.social-icons a.facebook:hover
-{
-  background-color:#3b5998
+.social-icons a.twitter:hover {
+  background-color: #00aced;
 }
-.social-icons a.twitter:hover
-{
-  background-color:#00aced
+.social-icons a.linkedin:hover {
+  background-color: #007bb6;
 }
-.social-icons a.linkedin:hover
-{
-  background-color:#007bb6
+.social-icons a.dribbble:hover {
+  background-color: #ea4c89;
 }
-.social-icons a.dribbble:hover
-{
-  background-color:#ea4c89
-}
-@media (max-width:767px)
-{
-  .social-icons li.title
-  {
-    display:block;
-    margin-right:0;
-    font-weight:600
+@media (max-width: 767px) {
+  .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600;
   }
 }
