--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,7 +22,7 @@ main {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
   right: 0;
@@ -38,9 +38,9 @@ h1 {
   padding-bottom: 2rem;
 }
 
-#posts {
+/* #posts {
   position: absolute;
-}
+} */
 
 #posts {
   padding-bottom: 150px;
@@ -205,7 +205,6 @@ div .sticky {
   height: 45.03px;
   left: 150.61px;
   top: 500.29px;
-  /* position: absolute; */
 }
 
 .form__button:hover {
@@ -402,11 +401,9 @@ div .sticky {
 
 .page-nav {
   bottom: 0;
-
   left: 0;
   width: 100%;
   margin: 30px 0 30px 0;
-  /* position: absolute; */
 }
 
 .page-nav > div {
